skeleton creation code

--- a/lib/wrench/templates/main.rb.erb
+++ b/lib/wrench/templates/main.rb.erb
@@ -1,4 +1,4 @@
-require File.join( File.dirname(__FILE__), <%= project %>, "version" )
+require File.join( File.dirname(__FILE__), <%= name %>, "version" )
 
 module <%= module_name %>
 end
